--- a/styles.css
+++ b/styles.css
@@ -182,3 +182,10 @@ ul {
 .email { background-color: #EA4335;}
 .linkedin { background-color: #0077B5;}
 .github { background-color: #333;}
+
+footer {
+    padding: 10px 10%;
+    text-align: center;
+    border-top: 1px solid #222;
+    color: #fff;
+}
