--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,8 @@
 }
 
 body {
-    background: #0a0a0a;
-    color: #fff;
+    
+    color: #a11010;
 }
 
 .secao {
@@ -23,8 +23,8 @@ header {
 }
 
 .fundo-header {
-    background: #0077B5;
-    margin-left:  5px
+    background: #13c107;
+    margin-left: 0px
 }
 
 ul {
@@ -34,9 +34,10 @@ ul {
 }
 
 .principal {
+    background-color:#190808;
     display: flex;
     align-items: center;
-    margin-left: 30px;
+    margin-left: 0px;
     min-height: 85vh;
 }
 
@@ -64,6 +65,10 @@ ul {
     padding: 15px 30px;
     background-color: #021036;
     font-weight: bold;
+}
+
+.secao {
+    background:#190808
 }
 
 .titulo-secao {
